# SimTradeML

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
config/: settings.py
docs/: Ptrade支持第三方库.md  补充训练辅助库.md
examples/: README_MVP.md  complete_example.py  load_model_example.py  mvp_train.py
infra/: README.md  __init__.py  app.py  cdk_stack.py
simtrademl/: __init__.py
simtrademl/api/: app.py  auth.py  model_loader.py  rate_limiter.py  schemas.py
simtrademl/api/routers/: management.py  predict.py
simtrademl/features/: engineer.py
simtrademl/features/store/: __init__.py  base.py  definitions.py  timescale.py
simtrademl/models/: arima_model.py  base.py  loader.py  prophet_model.py  registry.py
simtrademl/tests/integration/: README.md  conftest.py  test_api.py  test_api_security.py  test_batch_predict.py  test_feature_store.py  test_tuner.py
simtrademl/tests/unit/: test_cdk_stack.py  test_data_cleaning.py  test_data_validation.py  test_feature_pipeline.py  test_file_connector.py  test_logging.py  test_model_loader.py  test_rolling_features.py  test_time_series_models.py  test_trainer.py  test_tuner.py  test_version.py
simtrademl/training/: __init__.py  search_spaces.py  trainer.py  tuner.py
simtrademl/utils/: logging.py
src/simtrademl/: __init__.py
src/simtrademl/core/: __init__.py
src/simtrademl/core/models/: __init__.py  exporter.py  metadata.py  package.py
src/simtrademl/core/utils/: __init__.py  config.py  logger.py  metrics.py
src/simtrademl/data_sources/: __init__.py  simtradelab_source.py
src/simtrademl/features/: __init__.py  registry.py  technical.py
tests/: __init__.py  conftest.py  test_exporter.py  test_features.py  test_metadata.py  test_package.py
tests/unit/: __init__.py  test_collector.py  test_config.py  test_data_source.py  test_logger.py  test_metrics.py  test_simtradelab_source.py
