[tool.poetry]
name = "simtrademl"
version = "0.1.0"
description = "A modular ML framework for financial simulation and quantitative trading"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "simtrademl"}]

[tool.poetry.dependencies]
python = "^3.9"
# Core dependencies
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"

# Data processing
polars = {version = "^0.19.0", optional = true}
ta-lib = {version = "^0.4.28", optional = true}
pyarrow = "^14.0.0"

# ML frameworks
xgboost = "^2.0.0"
lightgbm = "^4.0.0"
statsmodels = "^0.14.0"
prophet = {version = "^1.1.0", optional = true}

# Deep learning (optional)
torch = {version = "^2.1.0", optional = true}
tensorflow = {version = "^2.14.0", optional = true}

# API
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
httpx = "^0.25.0"
slowapi = "^0.1.9"

# Experiment tracking
mlflow = "^2.8.0"

# Data validation
great-expectations = "^0.18.0"

# Configuration
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"

# Logging
structlog = "^23.2.0"

# Monitoring
prometheus-client = "^0.19.0"
opentelemetry-api = {version = "^1.21.0", optional = true}
opentelemetry-sdk = {version = "^1.21.0", optional = true}
opentelemetry-instrumentation-fastapi = {version = "^0.42b0", optional = true}

# Utilities
tenacity = "^8.2.3"
scipy = "^1.11.0"
psycopg2-binary = "^2.9.11"
redis = "^6.4.0"

[tool.poetry.group.dev.dependencies]
# Code quality
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"
pre-commit = "^3.5.0"

# Testing
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.12.0"
pytest-benchmark = {version = "^4.0.0", optional = true}
locust = {version = "^2.17.0", optional = true}

# Type stubs
pandas-stubs = "^2.1.1.230928"
types-pyyaml = "^6.0.12.12"
pyscn = "^1.1.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.14"

[tool.poetry.extras]
deep-learning = ["torch", "tensorflow"]
advanced-features = ["polars", "ta-lib", "prophet"]
monitoring = ["opentelemetry-api", "opentelemetry-sdk", "opentelemetry-instrumentation-fastapi"]
performance-testing = ["pytest-benchmark", "locust"]
all = [
    "torch", "tensorflow",
    "polars", "ta-lib", "prophet",
    "opentelemetry-api", "opentelemetry-sdk", "opentelemetry-instrumentation-fastapi",
    "pytest-benchmark", "locust"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "xgboost.*",
    "lightgbm.*",
    "prophet.*",
    "feast.*",
    "great_expectations.*",
    "mlflow.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=simtrademl",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "performance: Performance tests",
    "e2e: End-to-end tests",
    "data_quality: Data quality tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["simtrademl"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
