[tool.poetry]
name = "simtrademl"
version = "0.1.0"
description = "Intelligent prediction engine for SimTrade ecosystem - training ML models compatible with Ptrade"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "simtrademl"}]

[tool.poetry.dependencies]
python = "^3.9"

# Core ML frameworks (Ptrade compatible versions)
numpy = "^1.11.2"
#scikit-learn = "^0.18.0"
xgboost = "^0.90"
#statsmodels = "^0.10.2"
#scipy = "^0.18.0"

# Data processing
#h5py = "^2.6.0"  # Read SimTradeData .h5 files

# Deep learning (optional, Ptrade compatible)
tensorflow = {version = "~1.3.0", optional = true}
keras = {version = "~2.2.4", optional = true}
theano = {version = "~0.8.2", optional = true}

# Training auxiliary tools (not serialized to model)
optuna = "^4.5.0"  # Hyperparameter optimization
mlflow = "^2.8.0"  # Experiment tracking
#shap = "^0.44.0"  # Model interpretation
#imbalanced-learn = "^0.12.0"  # Imbalanced dataset handling
tsfresh = "^0.21.1" # Time series feature extraction
pandera = "^0.18.0"  # Data validation
ta-lib = {version = "^0.4.10", optional = true}  # Technical indicators

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
notebook = "^7.4.7"