[tool.poetry]
name = "simtrademl"
version = "0.2.0"
description = "Reusable ML framework for quantitative trading - integrates with SimTradeLab"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "simtrademl", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"

# Core dependencies - aligned with SimTradeLab
numpy = ">=1.20.0"
pandas = ">=1.3.0"
scipy = ">=1.8.0"
pyyaml = "^6.0"
tqdm = "^4.60.0"
xgboost = "0.90"
scikit-learn = ">=1.0.0"

# SimTradeLab (optional but recommended)
simtradelab = {version = "^1.2.0", optional = true}

# Optional: Training tools
optuna = {version = "^4.5.0", optional = true}
mlflow = {version = "^2.8.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
jupyter = "^1.0.0"

[tool.poetry.extras]
simtradelab = ["simtradelab"]
training-tools = ["optuna", "mlflow"]
all = ["simtradelab", "optuna", "mlflow"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
